# hexlet-django-blog

./: diff.txt  pyproject.toml
hexlet_django_blog/: .env  settings.py  urls.py  views.py
hexlet_django_blog/article/: admin.py  forms.py  models.py  urls.py  views.py
hexlet_django_blog/article/migrations/: 0001_initial.py
hexlet_django_blog/templates/: base.html  index.html
hexlet_django_blog/templates/articles/: create.html  index.html  update.html
