[tool.poetry]
name = "hexlet-django-blog"
version = "0.1.0"
description = ""
authors = ["onthemod <onthemod@yandex.ru>"]
readme = "README.md"
packages = [{include = "hexlet_django_blog"}]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.2.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
